# bibliapi

./: .env  Cargo.toml  Containerfile  bibliapi.wasm  diesel.toml
db/: biblia.redb  find_duplicated_verses.sql
db/SQLite/: BOOKS.sql  VERSES.sql
db/csv/: BOOKS.csv
src/: main.rs  schema.rs
